# Goodman

./: .gitignore  Cargo.toml  README.md  unused.rs
examples/baba/src/: game.rs  level.rs  main.rs  other.rs
examples/breakout/src/: main.rs
examples/chess/src/: consts.rs  main.rs  moves.rs  piece_data.rs  pieces.rs  state.rs  textures.rs  types.rs
examples/getting_started/src/: main.rs
examples/mario/: Cargo.toml
examples/mario/src/: main.rs
examples/particle_sim/: Cargo.toml
examples/particle_sim/src/: main.rs  particle.rs
examples/physics/src/: main.rs
examples/pong/: Cargo.toml
examples/pong/src/: ball.rs  main.rs  paddle.rs
examples/shooter/: Cargo.toml
examples/shooter/src/: main.rs
examples/test_examplee/: Cargo.toml
examples/test_examplee/src/: main.rs
examples/testo/src/: main.rs
src/: camera.rs  engine.rs  engine_builder.rs  engine_manager.rs  input.rs  instances.rs  lib.rs  main.rs  math.rs  minor_types.rs  object_data.rs  prelude.rs  shader.wgsl  sound.rs  state.rs  state_manager.rs  texture.rs  time.rs  ui.rs  vert_buffers.rs  vertices.rs
src/engine/: engine_manager.rs  shader.wgsl
src/examples/breakout/src/: main.rs
src/examples/pong/src/: ball.rs  main.rs  paddle.rs
src/examples/test_examplee/src/: main.rs
