[package]
name = "goodman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17"
winit = "0.28"
cgmath = "0.18"
egui = "0.22"
egui_wgpu_backend = "0.25"
egui_winit_platform = "0.19"
env_logger = "0.10"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
spin_sleep = "1.1.1"
rodio = "0.17"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[[bin]]
name = "p"
path = "examples/pong/src/main.rs"
[[bin]]
name = "b"
path = "examples/breakout/src/main.rs"
[[bin]] 
name = "baba"
path = "examples/baba/src/main.rs"
[[bin]] 
name = "physics"
path = "examples/physics/src/main.rs"

