[package]
name = "goodman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18"
winit = "0.28"
cgmath = "0.18"
egui = "0.23"
egui_wgpu_backend = "0.27"
egui_winit_platform = "0.20"
env_logger = "0.10"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
spin_sleep = "1.1.1"
rodio = "0.17"
egui_plot = "0.23.0"
# wgpu_glyph = { version = "0.20", git = "https://github.com/sotrh/wgpu_glyph.git" }

[dev-dependencies]
rand = "0.8.5"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[[example]] 
name = "getting_started"
path = "examples/getting_started/src/main.rs"
[[example]]
name = "pong"
path = "examples/pong/src/main.rs"
[[example]] 
name = "baba"
path = "examples/baba/src/main.rs"
[[example]] 
name = "physics"
path = "examples/physics/src/main.rs"
[[example]] 
name = "chess"
path = "examples/chess/src/main.rs"
[[example]] 
name = "sim"
path = "examples/particle_sim/src/main.rs"
[[example]]
name = "mario"
path = "examples/mario/src/main.rs"

